# Cheddarr

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  app.json  cheddarr.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setenv  setup.py  wsgi.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cheddarr.yml  ci.yml  codeql-analysis.yml  lint.yml  publish_package.yml  pythonapp.yml
api/: server.dev.py
app/: package-lock.json  package.json
app/src/: App.js  index.css
client/: .eslintignore  .eslintrc  .prettierignore  .prettierrc  gen-comp.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
client/.storybook/: custom-theme.ts  main.ts  manager.ts  preview-head.html  preview.ts
client/public/: index.html  manifest.json
client/src/: .eslintrc  App.js  App.test.js  App.test.ts  App.test.tsx  App.tsx  DynamicApp.tsx  GlobalStyles.tsx  PrivateRoute.js  ProtectedRoute.js  STATIC_STYLE.js  Themes.ts  axiosInstance.ts  formDefaultValidators.js  http-client.ts  index.css  index.js  index.scss  index.tsx  router.tsx  routes.js  routes.ts  serviceWorker.ts  setupTests.ts  styled.d.ts  theme.css
client/src/components/: ConfigPreviewCard.tsx  DeleteUserModal.tsx  EditMediaProviderSettingsModal.tsx  EditMediaServerSettingsModal.tsx  EditNotificationsServiceSettingsModal.tsx  EmailSettingsForm.tsx  Episode.tsx  GithubLink.tsx  InitResetPasswordModal.tsx  ManageLogLevels.tsx  MediaSlider.tsx  PickMediaProviderTypeModal.tsx  PickMediaServerTypeModal.tsx  PickNotificationsServiceTypeModal.tsx  PlexSettingsForm.tsx  RadarrSettingsForm.tsx  RequestTable.tsx  ResetPassword.tsx  ResetPasswordForm.tsx  RolesTree.tsx  SearchBar.tsx  SonarrSettingsForm.tsx  UsersList.tsx  UsersTable.tsx
client/src/context/: AuthContext.js  FriendsContext.js  userContext.js
client/src/contexts/: APIContext.js  AuthContext.js  FriendsContext.js  NotificationContext.js  PlexConfigContext.js  ProfileContext.js  ProvidersContext.js  ThemeContext.js
client/src/elements/: AvatarInput.js  Button.tsx  Carousel.js  Checkbox.tsx  Container.js  Image.js  Info.tsx  Input.tsx  MediaCardComponents.js  Modal.js  Modal.tsx  Notification.js  Pagination.tsx  PlexButton.js  Slider.tsx  Spinner.js  Switch.tsx  Table.tsx  Tabs.tsx  Tag.js  (+2 more)
migrations/: env.py
migrations/versions/: 28e76a857d3b_.py  2ebfca8dc6fb_remove_oauth.py  351e1bac3090_initial_migration.py  417f7a5239f5_.py  4bb6fb632673_.py  63b25783d0ef_remove_machine_id.py  6dfba39af800_.py  85aac03bb719_initial_migration.py  878bb2efd970_initial_migration.py  8dc3def8b2e2_.py  a480a343a9d9_api_key.py  ae3629962e74_.py  da11b0c0068d_.py  f8497b0ad6e4_friend_list.py  fb2620ce2b64_.py
server/: __init__.py  alembic.ini  app.py  commands.py  config.py  exceptions.py  forms.py  helpers.py  index.py  main.py  mypy.ini  server.dev.py  site.py  tasks.py  utils.py
server/api/: api.py  auth.py  dependencies.py  requests.py  router.py  search.py  users.py
server/auth/: __init__.py  forms.py  models.py  routes.py  schemas.py  serializers.py  urls.py  utils.py  views.py
server/core/: __init__.py  celery_app.py  commands.py  config.py  http_client.py  logger.py  scheduler.py  security.py  utils.py
server/database/: __init__.py  alembic.ini  base.py  column.py  engine.py  init_db.py  model.py  session.py  types.py
server/extensions/: __init__.py  celery.py  db.py  login_manager.py  mail.py  marshmallow.py  sqlalchemy.py
server/helpers/: plex.py  radarr.py  search.py  sonarr.py
server/jobs/: __init__.py  plex.py  radarr.py  sonarr.py
server/models/: __init__.py  base.py  media.py  notifications.py  providers.py  requests.py  settings.py  types.py  users.py
server/profile/: __init__.py  forms.py  schemas.py  serializers.py  urls.py  views.py
server/providers/: __init__.py  forms.py  models.py
server/repositories/: __init__.py  base.py  media.py  notifications.py  providers.py  requests.py  settings.py  users.py
server/schemas/: __init__.py  auth.py  base.py  core.py  external_services.py  media.py  notifications.py  plex.py  providers.py  radarr.py  requests.py  search.py  settings.py  sonarr.py  system.py  tmdb.py  users.py
server/search/: __init__.py  forms.py  routes.py  schemas.py  serializers.py  urls.py  views.py
server/services/: base.py  core.py  media.py  plex.py  radarr.py  requests.py  sonarr.py  tmdb.py
server/settings/: __init__.py  forms.py
server/site/: __init__.py  index.py  routes.py  urls.py  views.py
server/tests/: conftest.py  test_auth.py  test_search.py  test_site.py  test_users.py  utils.py
tests/: conftest.py  test_index.py
(+1315 files in other folders)
