[tool.poetry]
name = "cheddarr"
version = "0.1.0"
description = "Hub for media server architecture"
authors = ["Jeroli-co"]
license = "GNU GPL v3"


[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^0.7.0"
aiosqlite = "^0.17.0"
alembic = "^1.7.5"
appdirs = "^1.4.4"
APScheduler = "^3.8.1"
asgiref = "^3.4.1"
click = "^8.0.3"
fastapi = "^0.70.0"
emails = "^0.6"
email-validator = "^1.1.3"
greenlet = "^1.1.2"
gunicorn = "^20.1.0"
httpx = "^0.18.2"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
loguru = "^0.5.3"
passlib =  {version = "^1.7.4", extras = ["bcrypt"]}
PlexAPI = "^4.8.0"
pydantic = "^1.8.2"
PyJWT = {version = "^2.1.0",  extras = ["crypto"]}
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.11b1"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
sqlalchemy2-stubs = "^0.0.2a19"
poetryup = "^0.3.15"


[tool.black]
line-length = 99
exclude = '''

(
  /(
      \.git
    | \.venv
    | venv
    | build
    | migrations
  )/
)
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
